# codereviewbuddy

./: .coderabbit.yaml  .codereviewbuddy.toml  .copier-answers.yml  .env.example  .envrc  .gitignore  .lychee.toml  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  AI_PR_REVIEW_AGENT_FEEDBACK.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_TEMPLATE.md  git-town.toml  main.py  mkdocs.yml  prek.toml  propcom.sh  pyproject.toml  server.json  zensical.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.md  2-feature.md  4-change.md  config.yml
.github/workflows/: ci.yml  copier-update.yml  docs.yml  mcp-registry-publish.yml  release.yml
.tickets/: cod-15xk.md  cod-3tsf.md  cod-77wn.md  cod-8nll.md  cod-enj5.md  cod-f93v.md  cod-j42e.md  cod-k2lo.md  cod-rt0d.md  cod-sp9u.md  cod-yy8n.md
docs/: issue-65-observability.md
docs/.overrides/partials/: comments.html
docs/git-hooks/: commit-msg
docs/reference/: api.md
scripts/: check-template-update.sh  reset-and-adopt.sh  verify-scaffold.sh
src/codereviewbuddy/: __init__.py  _instance.py  cache.py  cli.py  config.py  gh.py  github_api.py  install.py  io_tap.py  log_rotation.py  middleware.py  models.py  server.py
src/codereviewbuddy/reviewers/: __init__.py  base.py  coderabbit.py  devin.py  greptile.py  registry.py  unblocked.py
src/codereviewbuddy/tools/: __init__.py  ci.py  comments.py  descriptions.py  issues.py  rereview.py  stack.py  version.py  wait.py
tests/: __init__.py  conftest.py  test_activity.py  test_cache.py  test_ci.py  test_cli.py  test_comments.py  test_config.py  test_descriptions.py  test_gh.py  test_github_api.py  test_install.py  test_instance.py  test_io_tap.py  test_issues.py  test_log_rotation.py  test_mcp_integration.py  test_mock_write_server.py  test_rereview.py  test_reviewers.py  test_server.py  test_stack.py  test_stdio_rapid_writes.py  test_triage.py  test_version.py  test_wait.py  test_write_middleware.py
tests/helpers/: mock_write_server.py
