[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "codereviewbuddy"
description = "codereview buddy helps your AI agent interact with AI code review--smoothly!"
authors = [{name = "Ismar Iljazovic", email = "ismart@gmail.com"}]
license = "ISC"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.14"
keywords = []
version = "0.1.1"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.14.5",
]

[project.urls]
Homepage = "https://detailobsessed.github.io/codereviewbuddy"
Documentation = "https://detailobsessed.github.io/codereviewbuddy"
Changelog = "https://detailobsessed.github.io/codereviewbuddy/changelog"
Repository = "https://github.com/detailobsessed/codereviewbuddy"
Issues = "https://github.com/detailobsessed/codereviewbuddy/issues"
Discussions = "https://github.com/detailobsessed/codereviewbuddy/discussions"
Funding = "https://github.com/sponsors/ichoosetoaccept"

[dependency-groups]
maintain = [
    "build>=1.2",
    "python-semantic-release>=10",
]
ci = [
    "ruff>=0.14",
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-randomly>=3.15",
    "ty>=0.0.14",
    "poethepoet>=0.32",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
local = [
    "prek>=0.3.1",
]
docs = [
    "markdown-callouts>=0.4",
    "markdown-exec>=1.10",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4",
    "mkdocs-llmstxt>=0.4",
    "mkdocs-material>=9.6",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-material-extensions>=1.3",
    "mkdocs-section-index>=0.3.9",
    "mkdocstrings[python]>=0.27",
]

[tool.uv]
default-groups = ["maintain", "ci", "docs", "local"]

[tool.ruff]
target-version = "py314"
line-length = 140
preview = true

[tool.ruff.lint]
select = [
    # Core (ruff defaults)
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes

    # Modern Python
    "UP",   # pyupgrade - use modern Python syntax
    "I",    # isort - import sorting

    # Code quality
    "B",    # flake8-bugbear - common bugs and design issues
    "SIM",  # flake8-simplify - simplify code
    "C4",   # flake8-comprehensions - better comprehensions
    "PIE",  # flake8-pie - misc improvements
    "RET",  # flake8-return - return statement issues
    "RUF",  # Ruff-specific rules
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat - catch missing commas
    "ICN",  # flake8-import-conventions
    "TID",  # flake8-tidy-imports - absolute imports
    "TC",   # flake8-type-checking - TYPE_CHECKING imports
    "PTH",  # flake8-use-pathlib - prefer pathlib over os.path
    "FURB", # refurb - modernize and simplify code

    # Performance
    "PERF", # Perflint - performance anti-patterns

    # Security
    "S",    # flake8-bandit - security issues

    # Testing
    "PT",   # flake8-pytest-style

    # Error handling
    "TRY",  # tryceratops - exception handling
    "LOG",  # flake8-logging - logging best practices

    # Unused code
    "ARG",  # flake8-unused-arguments
    "ERA",  # eradicate - commented-out code

    # Print statements (use logging instead)
    "T20",  # flake8-print

    # Encoding
    "PLW1514",  # unspecified-encoding - require encoding in open()
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # Allow assert in tests
"tests/__init__.py" = ["RUF067"]  # Allow test constants (TESTS_DIR, FIXTURES_DIR)

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["codereviewbuddy"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "error",
    "error::EncodingWarning",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["src/", "tests/"]

[tool.coverage.report]
precision = 2
omit = ["src/*/__init__.py", "src/*/__main__.py", "tests/__init__.py"]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING", "if __name__ == .__main__.:"]

[tool.coverage.json]
output = "htmlcov/coverage.json"

[tool.ty.environment]
python-version = "3.14"

[tool.poe.tasks]
# Setup
setup = "uv sync"

# Quality checks
lint = "ruff check src tests"
format = "ruff format src tests"
typecheck = "ty check src tests"

# Combined tasks
check = ["lint", "typecheck"]
fix = ["lint --fix", "format"]

# Documentation
docs = "mkdocs serve"
docs-build = "mkdocs build -s"
docs-deploy = "mkdocs gh-deploy"

# Pre-commit
prek = "prek run --all-files"

# Template dev
verify-scaffold = "bash scripts/verify-scaffold.sh"

# Git utilities
tags = "sh -c 'git fetch --tags && git tag --sort=-version:refname'"

# GitHub utilities
releases = "gh release list --limit 10"
runs = "gh run list --limit 10"
watch = "gh run watch"

# Testing — conditionally set PYTHON_GIL=0 only on freethreaded builds (3.14t)
[tool.poe.tasks.test]
shell = "python -c 'import sys; exit(0 if \"t\" in sys.abiflags else 1)' 2>/dev/null && export PYTHON_GIL=0; pytest -m 'not slow'"
interpreter = "bash"

[tool.poe.tasks.test-all]
shell = "python -c 'import sys; exit(0 if \"t\" in sys.abiflags else 1)' 2>/dev/null && export PYTHON_GIL=0; pytest"
interpreter = "bash"

[tool.poe.tasks.test-cov]
shell = "python -c 'import sys; exit(0 if \"t\" in sys.abiflags else 1)' 2>/dev/null && export PYTHON_GIL=0; pytest --cov=src --cov-report=term-missing --cov-report=html"
interpreter = "bash"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = """
uv lock --upgrade-package "$PACKAGE_NAME"
git add uv.lock
uv build
"""
commit_message = "chore(release): {version}"
tag_format = "{version}"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
mode = "update"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "deps", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
